Almost finished!! Falta confirmar las pruebas de validaciones globales.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,5 +111,6 @@
     <string name="votaciones_abiertas_sum">Muestra votaciones globales disponibles</string>
     <string name="servidor_global">Servidor Global</string>
     <string name="volver_global">Volver global</string>
+    <string name="merge_results">Merge results</string>
 
 </resources>
